# checkmate-virtue

./: .dockerignore  .gitignore  APIVERVE_DONOTDELETE  API_V1_MIGRATION_CHANGELOG.md  BASE_URL_REFACTOR_SUMMARY.md  CHANGELOG.md  DIAGNOSTIC_PROGRESS_NOTE.md  Dockerfile  Dockerfile.playwright  Dockerfile.test  FIXER_CHANGELOG.md  FIXER_README.md  PROJECT_CHECKLIST.json  README-Docker-Tests.md  README.md  REFACTORING_SUMMARY.md  TEST_RESULTS_LOG.md  TIRE_INSPECTION_IMPLEMENTATION_SUMMARY.md  TIRE_INSPECTION_README.md  VIN_DECODER_README.md  WE_FIX_WITHOUT_MAKING_ANY_CHANGES_UNTIL_I_APPROVE_THEM.txt  artifact_report.txt  auth.py  auto_update_imports.py  basic_inspection.json  check_repo.py  config.py  debug_inspection.html  demo_tire_inspection.py  diagnostic_script.py  docker-compose.e2e.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  env.example  fix_services.sh  fix_test_headers.sh  fixer.py  invoice_routes.py  main.py  (+19 more)
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  inspection_routes.py  invoice_routes.py  vehicle_routes.py
app/config/: __init__.py  runtime.py
app/models/: __init__.py  inspection.py  invoice.py  vehicle.py
app/services/: __init__.py  inspection_service.py  invoice_service.py  vehicle_service.py
app/templates/: _breadcrumbs.html  industries.html  inspection_form.html  new_industry_inspection.html  redirect_to_guided_inspection.html  redirect_to_guided_inspections.html
app/utils/: __init__.py  file_utils.py  pdf_utils.py
artifacts/: README.md  junit.xml
artifacts/e2e/: unified-error-log.txt
backup_old_structure/data/: inspections.json  invoices.json
backup_old_structure/templates/: index.html  inspection_list.html  inspections.html  new_inspection.html  view_inspection.html
config/dev/: config.py
config/prod/: config.py
data/: clients.json  invoices.json  tire_inspections.json
docs/: README.md
gui_template/: README.md  base.html
gui_template/components/: cards.html  footer.html  forms.html  navbar.html
gui_template/pages/: dashboard.html
modules/inspection/: __init__.py  api_v1.py  error_responses.py  models.py  routes.py  service.py  test_data.py  test_routes.py  tire_models.py  tire_routes.py  tire_service.py
modules/vehicle_data/: README.md  __init__.py  models.py  routes.py  service.py  static_vin_data.json  vin_decoder.py
playwright-report/: index.html
playwright-reporters/: custom-dump-reporter.ts  unified-error-log-reporter.ts
qa/: ARTIFACT_CAPTURE_README.md  ENHANCED_ARTIFACT_CAPTURE_SUMMARY.md  GOTO_FIX_SUMMARY.md  PERMISSION_FIXES_SUMMARY.md  README.md  ci_test.sh  conftest.py  demo.sh  health_check.py  lint_tests.py  package.json  playwright.config.js  pyproject.toml  regression_test.py  ruff_rules.py  run_browser_tests.py  service_map.json  test_artifact_example.py  test_artifact_helpers.py  test_artifact_system.py  test_example.py  test_goto_fix.py  test_health_check.py  test_helpers.py  test_invoice_api.py
qa/artifacts/: artifact_report.txt
qa/logs/: error-log.json  error-log.txt
scripts/: inspection_services.sh  migrate_data.py  run-e2e-with-unified-log.sh  run-tests-docker.sh
services/vehicle-service/: Dockerfile  pyproject.toml
services/vehicle-service/app/: main.py
temp/: inspection_report_insp_20250813_193814.txt  inspection_report_insp_20250813_200247.txt
templates/: index.html  industries.html  inspection_form.html  inspection_list.html  inspection_with_tires.html  inspections.html  login.html  new_industry_inspection.html  new_inspection.html  redirect_to_guided_inspection.html  redirect_to_guided_inspections.html  redirect_to_industries.html  tire_inspection_section.html  view_inspection.html
test-results/: .last-run.json
tests/: __init__.py  conftest.py
(+171 files in other folders)
